--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,6 +1,6 @@
 [preset.0]
 
-name="Mac OSX"
+name="Mac"
 platform="Mac OSX"
 runnable=true
 custom_features=""
@@ -109,7 +109,7 @@ application/trademarks=""
 
 [preset.3]
 
-name="Linux/X11"
+name="Linux"
 platform="Linux/X11"
 runnable=true
 custom_features=""
