--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -19,8 +19,8 @@ jobs:
         uses: firebelley/godot-export@v3.0.0
         with:
           # Defining all the required inputs
-          godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/3.5/beta5/Godot_v3.5-beta5_linux_headless.64.zip
-          godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/3.5/beta5/Godot_v3.5-beta5_export_templates.tpz
+          godot_executable_download_url: https://downloads.tuxfamily.org/godotengine/3.4.4/Godot_v3.4.4-stable_linux_headless.64.zip
+          godot_export_templates_download_url: https://downloads.tuxfamily.org/godotengine/3.4.4/Godot_v3.4.4-stable_export_templates.tpz
           relative_project_path: ./
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
