use curated list of piece sets on html
trying to keep web export as small as possible.

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -5,7 +5,7 @@ platform="Mac OSX"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="COPYING.md, LICENSE"
 exclude_filter=""
 export_path="exports/chess.zip"
 script_export_mode=1
@@ -37,8 +37,9 @@ name="HTML"
 platform="HTML5"
 runnable=true
 custom_features=""
-export_filter="all_resources"
-include_filter=""
+export_filter="resources"
+export_files=PoolStringArray( "res://Board.tscn", "res://Events.gd", "res://Globals.gd", "res://Grid.gd", "res://Piece.tscn", "res://Square.gd", "res://Square.tscn", "res://Utils.gd", "res://assets/pieces/alpha/bB.png", "res://assets/pieces/alpha/bK.png", "res://assets/pieces/alpha/bN.png", "res://assets/pieces/alpha/bP.png", "res://assets/pieces/alpha/bQ.png", "res://assets/pieces/alpha/bR.png", "res://assets/pieces/alpha/wB.png", "res://assets/pieces/alpha/wK.png", "res://assets/pieces/alpha/wN.png", "res://assets/pieces/alpha/wP.png", "res://assets/pieces/alpha/wQ.png", "res://assets/pieces/alpha/wR.png", "res://assets/pieces/california/bB.png", "res://assets/pieces/california/bK.png", "res://assets/pieces/california/bN.png", "res://assets/pieces/california/bP.png", "res://assets/pieces/california/bQ.png", "res://assets/pieces/california/bR.png", "res://assets/pieces/california/wB.png", "res://assets/pieces/california/wK.png", "res://assets/pieces/california/wN.png", "res://assets/pieces/california/wP.png", "res://assets/pieces/california/wQ.png", "res://assets/pieces/california/wR.png", "res://assets/pieces/gioco/bB.png", "res://assets/pieces/gioco/bK.png", "res://assets/pieces/gioco/bN.png", "res://assets/pieces/gioco/bP.png", "res://assets/pieces/gioco/bQ.png", "res://assets/pieces/gioco/bR.png", "res://assets/pieces/gioco/wB.png", "res://assets/pieces/gioco/wK.png", "res://assets/pieces/gioco/wN.png", "res://assets/pieces/gioco/wP.png", "res://assets/pieces/gioco/wQ.png", "res://assets/pieces/gioco/wR.png", "res://assets/pieces/icpieces/bB.png", "res://assets/pieces/icpieces/bK.png", "res://assets/pieces/icpieces/bN.png", "res://assets/pieces/icpieces/bP.png", "res://assets/pieces/icpieces/bQ.png", "res://assets/pieces/icpieces/bR.png", "res://assets/pieces/icpieces/wB.png", "res://assets/pieces/icpieces/wK.png", "res://assets/pieces/icpieces/wN.png", "res://assets/pieces/icpieces/wP.png", "res://assets/pieces/icpieces/wQ.png", "res://assets/pieces/icpieces/wR.png", "res://assets/pieces/kosal/bB.png", "res://assets/pieces/kosal/bK.png", "res://assets/pieces/kosal/bN.png", "res://assets/pieces/kosal/bP.png", "res://assets/pieces/kosal/bQ.png", "res://assets/pieces/kosal/bR.png", "res://assets/pieces/kosal/wB.png", "res://assets/pieces/kosal/wK.png", "res://assets/pieces/kosal/wN.png", "res://assets/pieces/kosal/wP.png", "res://assets/pieces/kosal/wQ.png", "res://assets/pieces/kosal/wR.png", "res://assets/pieces/pirouetti/bB.png", "res://assets/pieces/pirouetti/bK.png", "res://assets/pieces/pirouetti/bN.png", "res://assets/pieces/pirouetti/bP.png", "res://assets/pieces/pirouetti/bQ.png", "res://assets/pieces/pirouetti/bR.png", "res://assets/pieces/pirouetti/wB.png", "res://assets/pieces/pirouetti/wK.png", "res://assets/pieces/pirouetti/wN.png", "res://assets/pieces/pirouetti/wP.png", "res://assets/pieces/pirouetti/wQ.png", "res://assets/pieces/pirouetti/wR.png", "res://assets/pieces/riohacha/bB.png", "res://assets/pieces/riohacha/bK.png", "res://assets/pieces/riohacha/bN.png", "res://assets/pieces/riohacha/bP.png", "res://assets/pieces/riohacha/bQ.png", "res://assets/pieces/riohacha/bR.png", "res://assets/pieces/riohacha/wB.png", "res://assets/pieces/riohacha/wK.png", "res://assets/pieces/riohacha/wN.png", "res://assets/pieces/riohacha/wP.png", "res://assets/pieces/riohacha/wQ.png", "res://assets/pieces/riohacha/wR.png", "res://assets/pieces/staunty/bB.png", "res://assets/pieces/staunty/bK.png", "res://assets/pieces/staunty/bN.png", "res://assets/pieces/staunty/bP.png", "res://assets/pieces/staunty/bQ.png", "res://assets/pieces/staunty/bR.png", "res://assets/pieces/staunty/wB.png", "res://assets/pieces/staunty/wK.png", "res://assets/pieces/staunty/wN.png", "res://assets/pieces/staunty/wP.png", "res://assets/pieces/staunty/wQ.png", "res://assets/pieces/staunty/wR.png", "res://assets/pieces/tatiana/bB.png", "res://assets/pieces/tatiana/bK.png", "res://assets/pieces/tatiana/bN.png", "res://assets/pieces/tatiana/bP.png", "res://assets/pieces/tatiana/bQ.png", "res://assets/pieces/tatiana/bR.png", "res://assets/pieces/tatiana/wB.png", "res://assets/pieces/tatiana/wK.png", "res://assets/pieces/tatiana/wN.png", "res://assets/pieces/tatiana/wP.png", "res://assets/pieces/tatiana/wQ.png", "res://assets/pieces/tatiana/wR.png", "res://assets/ui/Roboto-Medium.ttf", "res://assets/ui/button.png", "res://assets/ui/buttonhover.png", "res://assets/ui/checkedbox.png", "res://assets/ui/close.png", "res://assets/ui/flip_board.png", "res://assets/ui/verdana-bold.ttf", "res://assets/ui/whitespace.png", "res://frame.png", "res://icon.png", "res://networking/Network.gd", "res://pieces/Bishop.gd", "res://pieces/King.gd", "res://pieces/Knight.gd", "res://pieces/Pawn.gd", "res://pieces/Piece.gd", "res://pieces/Queen.gd", "res://pieces/Rook.gd", "res://saveload.gd", "res://sounds/Capture.ogg", "res://sounds/Check.ogg", "res://sounds/Defeat.ogg", "res://sounds/Draw.ogg", "res://sounds/Error.ogg", "res://sounds/Move.ogg", "res://sounds/SoundFX.gd", "res://sounds/SoundFX.tscn", "res://sounds/Victory.ogg", "res://ui/BottomLeftLabel.tscn", "res://ui/ClickableSprite.gd", "res://ui/ClickableSprite.tscn", "res://ui/FENlabel.gd", "res://ui/GameUI.tscn", "res://ui/Lobby.gd", "res://ui/Lobby.tscn", "res://ui/Preview.gd", "res://ui/Settings.gd", "res://ui/Settings.tscn", "res://ui/StartMenu.gd", "res://ui/StartMenu.tscn", "res://ui/Status.gd", "res://ui/Timer.gd", "res://ui/TimerLabels.gd", "res://ui/TopRightLabel.tscn", "res://ui/barbutton/BarTextureButton.gd", "res://ui/barbutton/BarTextureButton.tscn", "res://ui/colorpicker/ColorPicker.gd", "res://ui/colorpicker/ColorPicker.tscn", "res://ui/colorpicker/ColorPickerButton.gd", "res://ui/colorpicker/ColorPickerButton.tscn", "res://ui/colorpicker/ColorSelect.gd", "res://ui/colorpicker/ColorSelect.material", "res://ui/colorpicker/HueSlider.gd", "res://ui/colorpicker/OldColorView.gd", "res://ui/colorpicker/huepicker.material", "res://ui/flipbutton.gd", "res://ui/roboto.tres", "res://ui/sandisplay/SanDisplay.gd", "res://ui/sandisplay/SanDisplay.tscn", "res://ui/theme/button.tres", "res://ui/theme/buttonhover.tres", "res://ui/theme/flatblack.tres", "res://ui/theme/main.tres", "res://ui/verdana.tres" )
+include_filter="COPYING.md, LICENSE"
 exclude_filter=""
 export_path="exports/chess.html"
 script_export_mode=1
@@ -73,7 +74,7 @@ platform="Windows Desktop"
 runnable=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="COPYING.md, LICENSE"
 exclude_filter=""
 export_path="exports/chess.exe"
 script_export_mode=1
@@ -114,7 +115,7 @@ platform="Linux/X11"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="COPYING.md, LICENSE"
 exclude_filter=""
 export_path="exports/chess.x86_64"
 script_export_mode=1
