fix html export
- actually disable bad piece sets

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -39,7 +39,7 @@ runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter="COPYING.md, LICENSE"
-exclude_filter="assets/pieces/cburnett, assets/pieces/fresca, assets/pieces/governor, assets/pieces/horsey, assets/pieces/libra, assets/pieces/maestro, assets/pieces/pixel"
+exclude_filter="assets/pieces/alpha/*, assets/pieces/cburnett/*, assets/pieces/fresca/*, assets/pieces/governor/*, assets/pieces/horsey/*, assets/pieces/libra/*, assets/pieces/maestro/*, assets/pieces/pixel/*"
 export_path="exports/chess.html"
 script_export_mode=1
 script_encryption_key=""
