--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -116,7 +116,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="COPYING.md, LICENSE"
 exclude_filter=""
-export_path="exports/chess.x86_64"
+export_path="exports/linux/chess.x86_64"
 script_export_mode=1
 script_encryption_key=""
 
