--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="COPYING.md, LICENSE"
 exclude_filter=""
-export_path="exports/chess.zip"
+export_path=""
 script_export_mode=1
 script_encryption_key=""
 
@@ -40,7 +40,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="COPYING.md, LICENSE"
 exclude_filter="assets/pieces/alpha/*, assets/pieces/cburnett/*, assets/pieces/fresca/*, assets/pieces/governor/*, assets/pieces/horsey/*, assets/pieces/libra/*, assets/pieces/maestro/*, assets/pieces/pixel/*"
-export_path="exports/chess.html"
+export_path=""
 script_export_mode=1
 script_encryption_key=""
 
@@ -70,12 +70,12 @@ progressive_web_app/background_color=Color( 0, 0, 0, 1 )
 
 name="Windows"
 platform="Windows Desktop"
-runnable=false
+runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter="COPYING.md, LICENSE"
 exclude_filter=""
-export_path="exports/chess.exe"
+export_path=""
 script_export_mode=1
 script_encryption_key=""
 
@@ -116,7 +116,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="COPYING.md, LICENSE"
 exclude_filter=""
-export_path="exports/linux/chess.x86_64"
+export_path=""
 script_export_mode=1
 script_encryption_key=""
 
