--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -12,7 +12,8 @@ on:
       - main
 
 env:
-  GODOT_VERSION: 3.4.4
+  GODOT_VERSION: 3.5
+  RELEASE: rc6
   NAME: ${{ github.event.repository.name }}
 
 jobs:
@@ -20,7 +21,7 @@ jobs:
     name: Windows Export
     runs-on: ubuntu-20.04
     container:
-      image: docker://barichello/godot-ci:3.4.4
+      image: ghcr.io/theorioli/godot-ci:3.5.rc6
     steps:
       - name: Build
         uses: bend-n/godot-actions/.github/actions/export-windows@main
@@ -29,7 +30,7 @@ jobs:
     name: Linux Export
     runs-on: ubuntu-20.04
     container:
-      image: docker://barichello/godot-ci:3.4.4
+      image: ghcr.io/theorioli/godot-ci:3.5.rc6
     steps:
       - name: Build
         uses: bend-n/godot-actions/.github/actions/export-linux@main
@@ -38,7 +39,7 @@ jobs:
     name: Web Export
     runs-on: ubuntu-20.04
     container:
-      image: docker://barichello/godot-ci:3.4.4
+      image: ghcr.io/theorioli/godot-ci:3.5.rc6
     steps:
       - name: Build
         uses: bend-n/godot-actions/.github/actions/export-web@main
@@ -47,7 +48,7 @@ jobs:
     name: Mac Export
     runs-on: ubuntu-20.04
     container:
-      image: docker://barichello/godot-ci:3.4.4
+      image: ghcr.io/theorioli/godot-ci:3.5.rc6
     steps:
       - name: Build
         uses: bend-n/godot-actions/.github/actions/export-mac@main
@@ -56,7 +57,7 @@ jobs:
     name: Android Export
     runs-on: ubuntu-20.04
     container:
-      image: docker://barichello/godot-ci:3.4.4
+      image: ghcr.io/theorioli/godot-ci:3.5.rc6
     steps:
       - name: Build
         uses: bend-n/godot-actions/.github/actions/export-android@main
