--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -5,7 +5,7 @@ platform="Mac OSX"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter="COPYING.md, LICENSE"
+include_filter="COPYING.md, LICENSE, version"
 exclude_filter=""
 export_path=""
 script_export_mode=1
@@ -79,7 +79,7 @@ platform="HTML5"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter="COPYING.md, LICENSE"
+include_filter="COPYING.md, LICENSE, version"
 exclude_filter="assets/pieces/alpha/*, assets/pieces/governor/*, assets/pieces/horsey/*, assets/pieces/libra/*, assets/pieces/maestro/*, assets/pieces/pixel/*"
 export_path=""
 script_export_mode=1
@@ -114,7 +114,7 @@ platform="Windows Desktop"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter="COPYING.md, LICENSE"
+include_filter="COPYING.md, LICENSE, version"
 exclude_filter=""
 export_path=""
 script_export_mode=1
@@ -157,7 +157,7 @@ platform="Linux/X11"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter="COPYING.md, LICENSE"
+include_filter="COPYING.md, LICENSE, version"
 exclude_filter=""
 export_path=""
 script_export_mode=1
@@ -182,7 +182,7 @@ platform="Android"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="COPYING.md, LICENSE, version"
 exclude_filter=""
 export_path=""
 script_export_mode=1
@@ -380,3 +380,28 @@ permissions/write_sms=false
 permissions/write_social_stream=false
 permissions/write_sync_settings=false
 permissions/write_user_dictionary=false
+
+[preset.5]
+
+name="Linux/X11"
+platform="Linux/X11"
+runnable=false
+custom_features=""
+export_filter="all_resources"
+include_filter=""
+exclude_filter=""
+export_path=""
+script_export_mode=1
+script_encryption_key=""
+
+[preset.5.options]
+
+custom_template/debug=""
+custom_template/release=""
+binary_format/64_bits=true
+binary_format/embed_pck=false
+texture_format/bptc=false
+texture_format/s3tc=true
+texture_format/etc=false
+texture_format/etc2=false
+texture_format/no_bptc_fallbacks=true
