--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -62,8 +62,8 @@ jobs:
         if: matrix.platform == 'android'
         uses: bend-n/godot-actions/.github/actions/export-android@main
         with:
-          android-keystore-base64: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
-          android-password: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
+          android-keystore-base64: ${{ secrets.RELEASE_KEYSTORE_BASE64 }}
+          android-password: ${{ secrets.RELEASE_KEYSTORE_PASSWORD }}
 
   push-itch:
     needs: [export]
