Revert "try disabling android apk signing" as it too didnt work
This reverts commit 85b32f88cc42e35756aa9704eeb04252ce9ac1dc.

--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -60,9 +60,9 @@ jobs:
       - name: Build (Android)
         if: matrix.platform == 'android'
         uses: bend-n/godot-actions/.github/actions/export-android@main
-        # with:
-        #   android-keystore-base64: ${{ secrets.RELEASE_KEYSTORE_BASE64 }}
-        #   android-password: ${{ secrets.RELEASE_KEYSTORE_PASSWORD }}
+        with:
+          android-keystore-base64: ${{ secrets.RELEASE_KEYSTORE_BASE64 }}
+          android-password: ${{ secrets.RELEASE_KEYSTORE_PASSWORD }}
 
   push-itch:
     needs: [export]
