--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -140,14 +140,14 @@ codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
-application/modify_resources=false
+application/modify_resources=true
 application/icon=""
-application/file_version=""
-application/product_version=""
-application/company_name=""
-application/product_name=""
-application/file_description=""
-application/copyright=""
+application/file_version="1.4.0.0"
+application/product_version="281.256.256.009"
+application/company_name="bendn"
+application/product_name="chess"
+application/file_description="chess client"
+application/copyright="mit"
 application/trademarks=""
 
 [preset.3]
