--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -79,7 +79,7 @@ platform="HTML5"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter="COPYING.md, LICENSE, version"
+include_filter="COPYING.md, LICENSE, version, *.js"
 exclude_filter="assets/pieces/alpha/*, assets/pieces/governor/*, assets/pieces/horsey/*, assets/pieces/libra/*, assets/pieces/maestro/*, assets/pieces/pixel/*"
 export_path="exports/folder/index.html"
 script_export_mode=1
@@ -94,11 +94,11 @@ vram_texture_compression/for_desktop=false
 vram_texture_compression/for_mobile=false
 html/export_icon=true
 html/custom_html_shell="res://html/custom.html"
-html/head_include=""
+html/head_include="<script src=\"lib/stockfish.js\"></script>"
 html/canvas_resize_policy=2
 html/focus_canvas_on_start=true
 html/experimental_virtual_keyboard=true
-progressive_web_app/enabled=true
+progressive_web_app/enabled=false
 progressive_web_app/offline_page=""
 progressive_web_app/display=1
 progressive_web_app/orientation=0
