--- a/.github/workflows/export.yml
+++ b/.github/workflows/export.yml
@@ -8,68 +8,20 @@ on:
       - "**.import"
       - "**.tres"
       - "**.ttf"
-      - "**.yml"
+      - ".github/workflows/export.yml"
+      - "export_presets.cfg"
     branches:
       - main
 
-env:
-  GODOT_VERSION: 3.5
-  NAME: ${{ github.event.repository.name }}
-
 jobs:
   export:
-    runs-on: ubuntu-latest
-    container:
+    uses: bend-n/godot-actions/.github/workflows/callable-export.yml@main
+    with:
+      export-name: ${{ github.event.repository.name }}
+      godot-version: 3.5
       image: ghcr.io/bend-n/godot-2d:3.5
-    name: ${{ matrix.name }}
-    strategy:
-      matrix:
-        include:
-          - name: Windows export
-            platform: windows
-
-          - name: Linux export
-            platform: linux
-
-          - name: Mac export
-            platform: mac
-
-          - name: Web export
-            platform: web
-
-          - name: Android export
-            platform: android
-
-    steps:
-      - name: Build (Windows)
-        if: matrix.platform == 'windows'
-        uses: bend-n/godot-actions/.github/actions/export-windows@main
-
-      - name: Build (Linux)
-        if: matrix.platform == 'linux'
-        uses: bend-n/godot-actions/.github/actions/export-linux@main
-
-      - name: Build (Mac)
-        if: matrix.platform == 'mac'
-        uses: bend-n/godot-actions/.github/actions/export-mac@main
-
-      - name: Build (Web)
-        if: matrix.platform == 'web'
-        uses: bend-n/godot-actions/.github/actions/export-web@main
-
-      - name: Build (Android)
-        if: matrix.platform == 'android'
-        uses: bend-n/godot-actions/.github/actions/export-android@main
-        with:
-          android-keystore-base64: ${{ secrets.RELEASE_KEYSTORE_BASE64 }}
-          android-password: ${{ secrets.RELEASE_KEYSTORE_PASSWORD }}
-
-  push-itch:
-    needs: [export]
-    name: Push to itch.io
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Push
-        uses: bend-n/godot-actions/.github/actions/itch-push@main
-        with:
-          api-key: ${{ secrets.BUTLER_CREDENTIALS }}
+      platforms: "windows linux web android mac"
+    secrets:
+      android-keystore-base64: ${{ secrets.ANDROID_KEYSTORE_BASE64 }}
+      android-keystore-password: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
+      butler-api-key: ${{ secrets.BUTLER_CREDENTIALS }}
